--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  font-family: 'Open Sans', Arial, sans-serif;
+  font-family: 'Roboto', Arial, sans-serif;
   font-size: 1.6rem;
 }
 
