--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,10 +1,12 @@
 html {
   font-size: 62.5%;
+  height: 100%;
 }
 
 body {
   font-family: 'Roboto', Arial, sans-serif;
   font-size: 1.6rem;
+  height: 100vh;
 }
 
 .highlight {
