--- a/src/sass/layout/_container.scss
+++ b/src/sass/layout/_container.scss
@@ -1,4 +1,12 @@
 .container {
-  display: grid;
-  grid-gap: 2rem;
+  flex: 1;
+  display: flex;
+  height: 80vh;
+  gap: 10px;
+
+  @media (max-width: 520px) {
+    margin: 0 5px;
+    height: 50vh;
+    gap: 2px;
+  }
 }
